[package]
name = "acarshub_options"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
log = "0.4.17"
acarshub_logging = { path = "../acarshub_logging" }
